--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm": "6.4.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "node_modules/.bin/concurrently -r \"node_modules/.bin/nodemon index.js\" \"cd ces && npm start\""
   },
   "repository": {
     "type": "git",
@@ -22,11 +23,13 @@
   "homepage": "https://github.com/fhernandezn/ces#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "sequelize": "^4.42.0"
   },
   "devDependencies": {
+    "concurrently": "^4.1.0",
     "nodemon": "^1.18.9"
   }
 }
