--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "postinstall": "cd ces && npm install",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "node_modules/.bin/concurrently -r \"node_modules/.bin/nodemon index.js\" \"cd ces && npm start\""
+    "start:dev": "concurrently -r \"nodemon index.js\" \"cd ces && npm start\""
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,8 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "pg": "^7.8.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^4.42.0"
   },
   "devDependencies": {
